// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenshiftView Component should have a fallback title: title 1`] = `
<PageLayout>
  <PageHeader>
    Subscription Watch
  </PageHeader>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.cardHeading)"
      filterGraphData={
        Array [
          Object {
            "fill": "#8bc1f7",
            "id": "cores",
            "stroke": "#06c",
          },
          Object {
            "id": "thresholdCores",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="OpenShift"
      viewId="test_id"
    >
      <Select
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Cores",
              "value": "cores",
            },
            Object {
              "title": "Sockets",
              "value": "sockets",
            },
          ]
        }
        placeholder="Select option"
        selectedOptions="cores"
        variant="single"
      />
    </Connect(GraphCard)>
  </PageSection>
</PageLayout>
`;

exports[`OpenshiftView Component should render a non-connected component: non-connected 1`] = `
<PageLayout>
  <PageHeader>
    Dolor sit
  </PageHeader>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.cardHeading)"
      filterGraphData={
        Array [
          Object {
            "fill": "#8bc1f7",
            "id": "cores",
            "stroke": "#06c",
          },
          Object {
            "id": "thresholdCores",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="OpenShift"
      viewId="test_id"
    >
      <Select
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Cores",
              "value": "cores",
            },
            Object {
              "title": "Sockets",
              "value": "sockets",
            },
          ]
        }
        placeholder="Select option"
        selectedOptions="cores"
        variant="single"
      />
    </Connect(GraphCard)>
  </PageSection>
</PageLayout>
`;
